--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.4",
+    "axios": "^1.6.2",
     "framer-motion": "^10.12.16",
     "next": "^13.5.4",
     "react": "18.2.0",
@@ -22,6 +23,8 @@
     "tsparticles": "^2.9.3"
   },
   "devDependencies": {
+    "@iconify/icons-simple-icons": "^1.2.74",
+    "@iconify/react": "^4.1.1",
     "autoprefixer": "^10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
